# mp3-encoder-multicore

./: CMakeLists.txt  README.md  mp3-encoder-multicore.files  mp3-encoder-multicore.includes
build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake  encoder-multi-core
build_windows/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: encwav.cpp  main.cpp
src/include/: encwav.hpp
